update first meeting minute

--- a/items/meeting20240411.md
+++ b/items/meeting20240411.md
@@ -48,6 +48,7 @@ The following dictates who will scribe in this and the next meeting.
 | Name |
 | :---: |
 | Runyao Wang |
-| [Member name] |
-| [Member name] |
-| [Member name] |
+| Bingnan Zhao |
+| Heng Sun    |
+| Qiutong Zeng |
+| Yan Jin |
