--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Kangarun</string>
     <string name="title_activity_maps">MapsActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="next">Next</string>
