--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="_0_cal">0 cal</string>
     <string name="distance">distance</string>
     <string name="start">Start</string>
+    <string name="stop">Stop</string>
     <string name="permission_required_toast">permission required toast</string>
     <string name="permission_rationale_location">permission rationale location</string>
     <string name="location_permission_denied">location permission denied</string>
@@ -21,4 +22,6 @@
     <string name="map_not_ready" />
     <string name="map_not_ready_1">map not ready !!</string>
     <string name="zoom_buttons">zoom buttons</string>
+
+
 </resources>
