--- a/items/meeting20240429.md
+++ b/items/meeting20240429.md
@@ -8,10 +8,10 @@ This following is a very simple team meeting template. You should expand it base
 
 ## Agreed Procedure
 Stand up Procedure: 
-- Each team member present what they do in last week
+- Each team member present what they finished in last week
 - Check whether the basic feature is implement
 - Discussed the custom feature
-- Decided time of next meeting.
+- Decided time of next meeting
 
 
 ## Agenda Items
