message function almost done, waiting for test

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="map_not_ready" />
     <string name="map_not_ready_1">map not ready !!</string>
     <string name="zoom_buttons">zoom buttons</string>
+    <string name="select_user">Select User</string>
 
 
 </resources>
