--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -28,6 +28,10 @@
     <string name="select_user">Select User</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sports">Sports</string>
+    <string name="friends">Friends</string>
+    <string name="profile">Profile</string>
+    <string name="search">Search</string>
 
 
 </resources>
