--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -27,5 +27,12 @@
     <string name="start_exercise">Start Exercise</string>
     <string name="select_user">Select User</string>
 
+    <string-array name="gender_options">
+        <item>All Genders</item>
+        <item>Male</item>
+        <item>Female</item>
+        <item>Other</item>
+    </string-array>
+
 
 </resources>
